Bug 457673 - When I click on a shortcut to KCM added to desktop, an error message appears and the .desktop file opens with Kate
Summary: When I click on a shortcut to KCM added to desktop, an error message appears ...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kcmutils
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.96.0
Platform: Neon Linux
: VHI normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-08-09 12:03 UTC by Patrick Silva
Modified: 2022-08-09 16:50 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screen recording (1.13 MB, video/webm)
2022-08-09 12:03 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-08-09 12:03:21 UTC
Created attachment 151189 [details]
screen recording

SUMMARY
Not all KCMs are affected.

STEPS TO REPRODUCE
1. search for 'touchpad' with kickoff
2. right-click on 'Touchpad' search result and choose 'Add to desktop'
3. try to open Touchpad KCM via shortcut added to desktop

OBSERVED RESULT
an error message appears and the .desktop file opens with Kate.
Please watch the attached screen recording.

EXPECTED RESULT
the KCM opens

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.25.80
KDE Frameworks Version: 5.97.0
Qt Version: 5.15.5
Graphics Platform: Wayland
Comment 1 Bug Janitor Service 2022-08-09 13:16:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kcmutils/-/merge_requests/96
Comment 2 Nicolas Fella 2022-08-09 16:50:03 UTC
Git commit 03596a9677116ded39aeac164029822edb500822 by Nicolas Fella.
Committed on 09/08/2022 at 13:15.
Pushed by alex into branch 'master'.

Set Type=Application for generated KCM desktop file

Otherwise it can't be launched

M  +1    -0    tools/kcmmetadatagenerator.cpp

https://invent.kde.org/frameworks/kcmutils/commit/03596a9677116ded39aeac164029822edb500822