Set Type=Application for generated KCM desktop file

Otherwise it can't be launched

BUG: 457673